crates/gossamer-diagnostics/tests/snapshots/GT0014.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0014]: `i128` / `u128` have no 128-bit runtime representation on any - here
--- framed ---
error[GT0014]: `i128` / `u128` have no 128-bit runtime representation on any
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
