crates/gossamer-diagnostics/tests/snapshots/GT0017.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0017]: A generic call instantiates a type parameter with a concrete - here
--- framed ---
error[GT0017]: A generic call instantiates a type parameter with a concrete
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
