crates/gossamer-diagnostics/tests/snapshots/GT0020.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0020]: A method reached through a generic bound resolves only through a - here
--- framed ---
error[GT0020]: A method reached through a generic bound resolves only through a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
