crates/gossamer-diagnostics/tests/snapshots/GT0022.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0022]: `value(args)` was used on a type that is not callable. Only `fn` - here
--- framed ---
error[GT0022]: `value(args)` was used on a type that is not callable. Only `fn`
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
