crates/gossamer-diagnostics/tests/snapshots/GT0023.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0023]: `value.N` positional access was used on a non-tuple, or `N` is - here
--- framed ---
error[GT0023]: `value.N` positional access was used on a non-tuple, or `N` is
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
