crates/gossamer-diagnostics/tests/snapshots/GT0025.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
assertion_line: 86
expression: rendered
---
--- plain ---
error[GT0025]: A `#[derive(...)]` named a trait that synthesizes nothing. - here
--- framed ---
error[GT0025]: A `#[derive(...)]` named a trait that synthesizes nothing.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
